# Sauter

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1735546056724-fff1154d9bdd6.mjs
.github/workflows/: upload.yml
src/: App.vue  main.js  router.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/inject/: index.js
src-tauri/src/: main.rs
src/assets/css/: global.css  resetQuill.css
src/components/: Icon.vue  Log.vue
src/utils/: cache.js  index.js
