[package]
name = "Sauter"
version = "0.0.2"
description = "a tool to skip inode safe check"
authors = ["helsonlin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = { version = "2" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2.1"
window-vibrancy = "0.5.0"
tempfile = "3.2"
sys-info = "0.9.0"
log = "0.4"
env_logger = "0.10"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2.2.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
